# NSan-interflop-runtime

./: .gitignore  CMakeLists.txt  Makefile  linker.cpp  main.cpp  makefile  test.cpp
include/: Backend.hpp  Context.hpp  Flags.hpp  OpaqueShadow.hpp  Runtime.hpp  Shadow.hpp  Utils.hpp
include/backends/: DoublePrec.hpp  MCASync.hpp
include/runtimes/: DoublePrec.hpp  MCASync.hpp  Runtime.hpp
runtime/: makefile
runtime/cancellation/: runtime.cpp
runtime/cpp_dp/: interface.cpp  runtime.cpp  runtime.hpp  shadow.hpp
runtime/dp/: runtime.c  shadow.h
src/: Context.cpp  Flags.cpp  Interface.cpp  InterfaceGenerator.py  Interflop.cpp  Utils.cpp  interfaceGenerator.py
src/backends/: DoublePrec.cpp  MCASync.cpp
tests/: CMakeLists.txt  Makefile  kahan_sum.cpp  large_array_fill.cpp  main.cpp  makefile
tests/backend_tests/: CMakeLists.txt
tests/backend_tests/mcasync/: CMakeLists.txt
tests/backend_tests/mcasync/stochastic/: CMakeLists.txt  StochasticTest.cpp  makefile  one.cpp  plot.py  test.cpp
tests/backend_tests/mcasync/tchebychev/: makefile  plot.py  rounding.cpp
tests/internal_tests/mcasync/: makefile  plot.py  rounding.cpp
tests/nsan_tests/: cadna_ex5.cc  cadna_ex6.cc  cancellation_fn_ptr.cc  compute_pi.cc  smooth_surprise.cc
